--- a/styles/variables.less
+++ b/styles/variables.less
@@ -539,13 +539,17 @@
 @sand-picker-horizontal-button-border-radius: 130px;
 @sand-picker-value-height: 210px;
 @sand-picker-value-line-height: (@sand-picker-value-height / 2);
-@sand-picker-joined-value-line-height: @sand-picker-value-height;
-@sand-picker-medium-value-width:360px;
-@sand-picker-large-value-width:700px;
+@sand-picker-joined-value-offset: 55px;
+@sand-picker-joined-value-line-height: (@sand-picker-value-height - @sand-picker-joined-value-offset);
+@sand-picker-medium-value-width: 360px;
+@sand-picker-large-value-width: 700px;
 @sand-picker-indicator-width: 18px;
 @sand-picker-indicator-height: 18px;
-@sand-picker-indicator-active-width:24px;
-@sand-picker-indicator-active-height:24px;
+@sand-picker-indicator-active-width: 24px;
+@sand-picker-indicator-active-height: 24px;
+@sand-picker-indicator-border-radius: 50%;
+@sand-picker-indicator-margin-right: 24px;
+@sand-picker-indicator-bottom: 21px;
 
 // Popup
 // ---------------------------------------
